parse_select_stmt.cpp
#include <assert.h>
#include "parse_select_stmt.h"
#include "parse_expression.h"
#include "parse_tableref.h"
#include "sql_select_stmt.h"
#include "parse_exception.h"
#include "lex.h"

namespace GSP {

    AstSelectStmt           *parse_query_expression         (ILex *lex, ParseException *e);
    AstOrderByItem          *parse_order_by_item            (ILex *lex, ParseException *e);
    AstWithClause           *parse_with_clause              (ILex *lex, ParseException *e);

    AstQueryExpressionBody  *parse_query_expression_body    (ILex *lex, ParseException *e);
    AstQueryExpressionBody  *parse_query_term               (ILex *lex, ParseException *e);
    AstQueryExpressionBody  *parse_query_primary            (ILex *lex, ParseException *e);

    std::vector<AstProjection*>         parse_projection_list           (ILex *lex, ParseException *e);
    AstProjection                      *parse_projection                (ILex *lex, ParseException *e);
    std::vector<AstGroupingElem*>       parse_groupby_list              (ILex *lex, ParseException *e);
    std::vector<AstCommonTableExpr*>    parse_ctes_list                 (ILex *lex, ParseException *e);
    AstCommonTableExpr                 *parse_cte                       (ILex *lex, ParseException *e);


    AstSelectStmt *parse_select_stmt(ILex *lex, ParseException *e) {
        AstSelectStmt *select_stmt = parse_query_expression(lex, e);
        if (e->_code != ParseException::SUCCESS) {
            return nullptr;
        }
        if (lex->token()->type() == ORDER) {
            lex->next();
            if (lex->token()->type() != BY) {
                e->SetFail(BY, lex);
                return nullptr;
            }
            lex->next();
            std::vector<AstOrderByItem*> items;
            AstOrderByItem *order_by_item = parse_order_by_item(lex, e);
            if (e->_code != ParseException::SUCCESS) {
                delete (select_stmt);
                return nullptr;
            }
            items.push_back(order_by_item);
            for (; lex->token()->type() == COMMA; ) {
                lex->next();
                order_by_item = parse_order_by_item(lex, e);
                if (e->_code != ParseException::SUCCESS) {
                    delete (select_stmt);
                    for (auto it : items) {
                        delete (it);
                    }
                    items.clear();
                    return nullptr;
                }
                items.push_back(order_by_item);
            }
            select_stmt->SetOrderByClause(items);
        }
        return select_stmt;
    }

    AstSelectStmt *parse_query_expression(ILex *lex, ParseException *e) {
        AstWithClause *with_clause = nullptr;
        if (lex->token()->type() == WITH) {
            with_clause = parse_with_clause(lex, e);
            if (e->_code != ParseException::SUCCESS) {
                return nullptr;
            }
        }
        AstQueryExpressionBody *body = parse_query_expression_body(lex, e);
        if (e->_code != ParseException::SUCCESS) {
            delete (with_clause);
            return nullptr;
        }

        AstSelectStmt *select_stmt = new AstSelectStmt;
        select_stmt->SetWithClause(with_clause);
        select_stmt->SetBody(body);
        return select_stmt;
    }

    AstQueryExpressionBody::SET_TYPE mk_set_type(TokenType tk1, TokenType tk2) {
        assert(tk1 == UNION || tk1 == EXCEPT || tk1 == INTERSECT);
        if (tk1 == UNION) {
            if (tk2 == ALL) return AstQueryExpressionBody::UNION_ALL;
            else if (tk2 == DISTINCT) return AstQueryExpressionBody::UNION_DISTINCT;
            else return AstQueryExpressionBody::UNION;
        }
        else if (tk1 == EXCEPT) {
            if (tk2 == ALL) return AstQueryExpressionBody::EXCEPT_ALL;
            else if (tk2 == DISTINCT) return AstQueryExpressionBody::EXCEPT_DISTINCT;
            else return AstQueryExpressionBody::EXCEPT;
        }
        else {
            if (tk2 == ALL) return AstQueryExpressionBody::INTERSECT_ALL;
            else if (tk2 == DISTINCT) return AstQueryExpressionBody::INTERSECT_DISTINCT;
            else return AstQueryExpressionBody::INTERSECT;
        }
    }

    AstQueryExpressionBody *parse_query_expression_body(ILex *lex, ParseException *e) {
        AstQueryExpressionBody *query_term = parse_query_term(lex, e);
        if (e->_code != ParseException::SUCCESS) {
            return nullptr;
        }

        auto tkp = lex->token()->type();
        for (; tkp == UNION || tkp == EXCEPT; tkp = lex->token()->type()) {
            lex->next();
            AstQueryExpressionBody *left = query_term;
            query_term = new AstQueryExpressionBody;
            query_term->SetLeft(left);
            auto all_distinct = lex->token()->type();
            query_term->SetSetType(mk_set_type(tkp, all_distinct));
            if (all_distinct == ALL || all_distinct == DISTINCT) {
                lex->next();
            }
            AstQueryExpressionBody *right = parse_query_term(lex, e);
            if (e->_code != ParseException::SUCCESS) {
                delete (query_term);
                return nullptr;
            }
            query_term->SetRight(right);
        }
        return query_term;
    }

    AstQueryExpressionBody *parse_query_term(ILex *lex, ParseException *e) {
        // primary
        AstQueryExpressionBody *primary = parse_query_primary(lex, e);
        if (e->_code != ParseException::SUCCESS) {
            return nullptr;
        }
        TokenType tkp = lex->token()->type();
        for (; tkp == INTERSECT; tkp = lex->token()->type()) {
            lex->next();
            AstQueryExpressionBody *left = primary;
            primary = new AstQueryExpressionBody;
            primary->SetLeft(left);
            auto all_distinct = lex->token()->type();
            primary->SetSetType(mk_set_type(tkp, all_distinct));
            if (all_distinct == ALL || all_distinct == DISTINCT) {
                lex->next();
            }
            AstQueryExpressionBody *right = parse_query_primary(lex, e);
            if (e->_code != ParseException::SUCCESS) {
                delete (primary);
                return nullptr;
            }
            primary->SetRight(right);
        }
        return primary;
    }

    AstQueryPrimary::SELECT_TYPE mk_select_type(TokenType tkp) {
        if (tkp == ALL) return AstQueryPrimary::SELECT_ALL;
        else if (tkp == DISTINCT) return AstQueryPrimary::SELECT_DISTINCT;
        else return AstQueryPrimary::SELECT;
    }

    AstQueryPrimary::GROUP_TYPE  mk_group_type(TokenType tkp) {
        if (tkp == ALL) return AstQueryPrimary::GROUP_BY_ALL;
        else if (tkp == DISTINCT) return AstQueryPrimary::GROUP_BY_DISTINCT;
        else return AstQueryPrimary::GROUP_BY;
    }

    AstQueryExpressionBody *parse_query_primary(ILex *lex, ParseException *e) {
        AstQueryExpressionBody *r = nullptr;
        if (lex->token()->type() == SELECT) {
            AstQueryPrimary *primary = nullptr;
            lex->next();
            primary = new AstQueryPrimary;
